--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,5 +28,8 @@ jobs:
       - name: Run type check (if using TypeScript)
         run: npx tsc --noEmit
 
+      - name: Run tests
+        run: npm run test
+
       - name: Build
         run: npm run build
