chore: firestore setup. create user functionality. profile page

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "firebase": "^12.3.0",
     "next": "15.5.4",
     "prettier": "^3.6.2",
     "react": "19.1.0",
