--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "firebase": "^12.3.0",
+    "firebase-admin": "^13.5.0",
     "next": "15.5.4",
     "prettier": "^3.6.2",
     "react": "19.1.0",
