--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "prepare": "husky",
-    "functions:build": "cd functions && npm run build",
+    "functions:build": "cd functions && npm ci && npm run build",
     "functions:watch": "cd functions && npm run watch",
     "functions:serve": "cd functions && npm run serve",
     "functions:deploy": "firebase deploy --only functions",
-    "functions:logs": "firebase functions:log"
+    "functions:logs": "firebase functions:log",
+    "deploy:all": "npm run build && npm run functions:build && firebase deploy --only functions"
   },
   "dependencies": {
     "axios": "^1.12.2",
