--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "prepare": "husky",
+    "prepare": "is-ci || husky",
     "functions:build": "cd functions && npm ci && npm run build",
     "functions:watch": "cd functions && npm run watch",
     "functions:serve": "cd functions && npm run serve",
@@ -22,13 +22,8 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
     "firebase": "^12.3.0",
-    "firebase-admin": "^13.5.0",
-    "firebase-functions": "^6.4.0",
     "next": "15.5.4",
-    "prettier": "^3.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
@@ -44,10 +39,16 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "firebase-admin": "^13.5.0",
+    "firebase-functions": "^6.4.0",
     "husky": "^9.1.7",
+    "is-ci": "^3.0.1",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "lint-staged": "^16.2.3",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
