--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "prepare": "is-ci || husky",
+    "prepare": "node -e \"if(process.env.CI)process.exit(0)\" || husky",
     "functions:build": "cd functions && npm ci && npm run build",
     "functions:watch": "cd functions && npm run watch",
     "functions:serve": "cd functions && npm run serve",
