--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -44,12 +46,10 @@
     "firebase-admin": "^13.5.0",
     "firebase-functions": "^6.4.0",
     "husky": "^9.1.7",
-    "is-ci": "^3.0.1",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "lint-staged": "^16.2.3",
     "prettier": "^3.6.2",
-    "tailwindcss": "^4",
     "typescript": "^5"
   },
   "lint-staged": {
