fix: resolve CI/CD build failures
- Add missing environment variables to CI build step
- Fix Firebase Functions authentication in deployment workflow
- Create proper service account key file for Firebase CLI
- Add cleanup step to remove sensitive files

Fixes:
- CI build failures due to missing env vars
- Firebase Functions deployment authentication errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,9 +34,20 @@ jobs:
       - name: Build
         run: npm run build
         env:
+          # Public Firebase environment variables
           NEXT_PUBLIC_FIREBASE_API_KEY: ${{ vars.NEXT_PUBLIC_FIREBASE_API_KEY }}
           NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: ${{ vars.NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN }}
           NEXT_PUBLIC_FIREBASE_PROJECT_ID: ${{ vars.NEXT_PUBLIC_FIREBASE_PROJECT_ID }}
           NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: ${{ vars.NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET }}
           NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ${{ vars.NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID }}
           NEXT_PUBLIC_FIREBASE_APP_ID: ${{ vars.NEXT_PUBLIC_FIREBASE_APP_ID }}
+          # Private Firebase environment variables (for server-side only)
+          FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+          FIREBASE_CLIENT_EMAIL: ${{ secrets.FIREBASE_CLIENT_EMAIL }}
+          FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
+          # Other required environment variables
+          ENCRYPTION_KEY: ${{ secrets.ENCRYPTION_KEY }}
+          TRUELAYER_CLIENT_ID: ${{ secrets.TRUELAYER_CLIENT_ID }}
+          TRUELAYER_CLIENT_SECRET: ${{ secrets.TRUELAYER_CLIENT_SECRET }}
+          MONZO_CLIENT_ID: ${{ secrets.MONZO_CLIENT_ID }}
+          MONZO_CLIENT_SECRET: ${{ secrets.MONZO_CLIENT_SECRET }}
