Fix CI/CD and Netlify build failures (#17)
* chore: npm install prettier & set format on save vscode settings

* chore: sets up husky for pre commit linting and GH action workflow

* chore: jest setup for testing w/ example page.test and ci flow update

* chore: removes nextjs boilerplate code & sets basic homescreen

* chore: gitignore and readme updates

* chore: workflow update for env vars (#2)

* chore: firestore setup. create user functionality. profile page (#1)

* chore: firestore setup. create user functionality. profile page

* chore: tests

* chore: truelayer connection & list accounts (#3)

* chore: truelayer connection

* chore: connected accounts update and token storage setup

* chore: build errors

* chore: build fix attempt 2

* chore: dashboard cleaup and debug page (#4)

* chore: dashboard cleaup and debug page

* chore: build errs

* chore: creates banking data context to save state and reduce api calls (#5)

* Scheduled fb function (#6)

* chore: firebase function creation

* chore: automation working

* chore: build issues

* chore: url updates (#8)

* chore: url update

* chore: deploy functions file (#10)

* chore: package updates

* package update

* config updates

* branch fixes

* chore: moves project plans

* chore: build testing (#15)

* fix: resolve CI/CD build failures

- Add missing environment variables to CI build step
- Fix Firebase Functions authentication in deployment workflow
- Create proper service account key file for Firebase CLI
- Add cleanup step to remove sensitive files

Fixes:
- CI build failures due to missing env vars
- Firebase Functions deployment authentication errors

* fix: add webpack configuration to prevent Netlify secret scanning issues

- Add firebase-admin externals to prevent client bundling
- Add Node.js module fallbacks for client builds
- Ensures private environment variables stay server-side only

* fix: remove documentation files containing secrets

- Delete MONZO_OAUTH_SETUP.md (contained MONZO_REDI

--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -29,6 +29,17 @@ jobs:
           npm run functions:build
           echo "✅ Functions built successfully"
           ls -la functions/lib/
+        env:
+          # Private Firebase environment variables (for server-side only)
+          FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+          FIREBASE_CLIENT_EMAIL: ${{ secrets.FIREBASE_CLIENT_EMAIL }}
+          FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
+          # Other required environment variables
+          ENCRYPTION_KEY: ${{ secrets.ENCRYPTION_KEY }}
+          TRUELAYER_CLIENT_ID: ${{ secrets.TRUELAYER_CLIENT_ID }}
+          TRUELAYER_CLIENT_SECRET: ${{ secrets.TRUELAYER_CLIENT_SECRET }}
+          MONZO_CLIENT_ID: ${{ secrets.MONZO_CLIENT_ID }}
+          MONZO_CLIENT_SECRET: ${{ secrets.MONZO_CLIENT_SECRET }}
 
       - name: Verify functions build
         run: |
