--- a/netlify.toml
+++ b/netlify.toml
@@ -23,3 +23,14 @@
   query = { q = ":quality", url = ":url", w = ":width" }
   status = 200
   to = "/.netlify/images?url=:url&w=:width&q=:quality"
+
+# Force custom domain for OAuth callbacks to avoid main-- prefix
+[[redirects]]
+  from = "/api/auth/monzo/callback"
+  status = 301
+  to = "https://cc-balance-to-monzo.netlify.app/api/auth/monzo/callback"
+
+[[redirects]]
+  from = "/api/auth/truelayer/callback"
+  status = 301
+  to = "https://cc-balance-to-monzo.netlify.app/api/auth/truelayer/callback"
