enhance: add comprehensive main-- prefix prevention
- Add redirect rule to catch any main-- prefixed URLs and redirect to clean domain
- Add debugging logs to track which URL is being used in production
- Ensure all OAuth flows use clean cc-balance-to-monzo.netlify.app domain
- Prevent any branch deployment URLs from appearing in OAuth redirects

This provides multiple layers of protection against the main-- prefix issue.

--- a/netlify.toml
+++ b/netlify.toml
@@ -34,3 +34,9 @@
   from = "/api/auth/truelayer/callback"
   status = 301
   to = "https://cc-balance-to-monzo.netlify.app/api/auth/truelayer/callback"
+
+# Redirect any main-- prefixed URLs to clean domain
+[[redirects]]
+  from = "https://main--cc-balance-to-monzo.netlify.app/*"
+  status = 301
+  to = "https://cc-balance-to-monzo.netlify.app/:splat"
