🔧 Fix OAuth Redirect Issues & Prevent main-- Prefix (#23)
* fix: resolve OAuth redirect race condition

- Fix OAuth callback pages redirecting to signin instead of dashboard
- Handle auth state race conditions in OAuth flows
- Improve ProtectedRoute with small delay to prevent race conditions
- Add comprehensive debugging logs for OAuth flow tracking
- Ensure successful OAuth always redirects to dashboard
- Add error handling to AuthContext for better reliability

Fixes issue where users completing OAuth (Monzo/TrueLayer) were sometimes
redirected to signin page instead of dashboard due to auth state timing.

* fix: prevent main-- prefix in OAuth redirects

- Force custom domain in production to avoid Netlify branch deployment URLs
- Add Netlify redirect rules to ensure OAuth callbacks use clean domain
- Prioritize CUSTOM_DOMAIN environment variable for flexibility
- Fallback to clean netlify.app domain instead of main-- prefix

This prevents the annoying main--cc-balance-to-monzo.netlify.app URLs
that appear during OAuth flows and ensures clean redirects.

* enhance: add comprehensive main-- prefix prevention

- Add redirect rule to catch any main-- prefixed URLs and redirect to clean domain
- Add debugging logs to track which URL is being used in production
- Ensure all OAuth flows use clean cc-balance-to-monzo.netlify.app domain
- Prevent any branch deployment URLs from appearing in OAuth redirects

This provides multiple layers of protection against the main-- prefix issue.

* fix: resolve Netlify secrets scanning build failure

- Remove hardcoded OAuth callback redirects that triggered secrets scanning
- Keep main-- prefix redirect rule for clean domain enforcement
- Add MONZO_REDIRECT_URI and TRUELAYER_REDIRECT_URI to SECRETS_SCAN_OMIT_KEYS
- OAuth redirects will be handled by code-level domain enforcement instead

This fixes the build failure while maintaining the main-- prefix prevention.

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
 [build.environment]
   # Disable secret scanning for FIREBASE_PROJECT_ID since it's being bundled
   # despite our webpack configuration attempts
-  SECRETS_SCAN_OMIT_KEYS = "FIREBASE_PROJECT_ID"
+  SECRETS_SCAN_OMIT_KEYS = "FIREBASE_PROJECT_ID,MONZO_REDIRECT_URI,TRUELAYER_REDIRECT_URI"
 
 [[headers]]
   for = "/_next/static/*"
@@ -23,3 +23,9 @@
   query = { q = ":quality", url = ":url", w = ":width" }
   status = 200
   to = "/.netlify/images?url=:url&w=:width&q=:quality"
+
+# Redirect any main-- prefixed URLs to clean domain
+[[redirects]]
+  from = "https://main--cc-balance-to-monzo.netlify.app/*"
+  status = 301
+  to = "https://cc-balance-to-monzo.netlify.app/:splat"
