--- a/package.json
+++ b/package.json
@@ -23,15 +23,12 @@
   "dependencies": {
     "axios": "^1.12.2",
     "firebase": "^12.3.0",
-    "next": "15.5.4",
+    "next": "^16.0.7",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -39,8 +36,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
-    "eslint-config-next": "15.5.4",
+    "eslint-config-next": "^16.0.7",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "firebase-admin": "^13.5.0",
@@ -49,7 +47,9 @@
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "lint-staged": "^16.2.3",
+    "postcss": "^8.4.49",
     "prettier": "^3.6.2",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   },
   "lint-staged": {
