--- a/firebase.json
+++ b/firebase.json
@@ -15,5 +15,8 @@
   "hosting": {
     "public": "out",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+  },
+  "firestore": {
+    "rules": "firestore.rules"
   }
 }
